# ChangeLog for dev-util/bzr
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/bzr/ChangeLog,v 1.110 2009/09/29 23:48:02 jer Exp $

  29 Sep 2009; Jeroen Roovers <jer@gentoo.org> bzr-1.15.1.ebuild,
  bzr-1.18.ebuild, bzr-2.0.0.ebuild:
  Marked ~hppa too.

*bzr-2.0.0 (23 Sep 2009)

  23 Sep 2009; Christian Faulhammer <fauli@gentoo.org> -bzr-2.0_rc1.ebuild,
  +bzr-2.0.0.ebuild:
  version bump

*bzr-2.0_rc1 (27 Aug 2009)

  27 Aug 2009; Christian Faulhammer <fauli@gentoo.org> +bzr-2.0_rc1.ebuild:
  bump to release candidate

  27 Aug 2009; Christian Faulhammer <fauli@gentoo.org> -bzr-1.16.1.ebuild,
  -bzr-1.17.ebuild:
  clean up

*bzr-1.18 (27 Aug 2009)

  27 Aug 2009; Christian Faulhammer <fauli@gentoo.org> +bzr-1.18.ebuild:
  version bump

*bzr-1.17 (18 Aug 2009)

  18 Aug 2009; Christian Faulhammer <fauli@gentoo.org> +bzr-1.17.ebuild:
  add Bazaar 1.17 although it fails some tests. It is not intended for
  stabilisation anyway

  20 Jul 2009; Christian Faulhammer <fauli@gentoo.org>
  -files/bzr-0.92-no-pyrex.patch, -bzr-1.9.ebuild, -bzr-1.10.ebuild,
  -bzr-1.11.ebuild, -bzr-1.12.ebuild, -bzr-1.13.2.ebuild,
  -bzr-1.14.1.ebuild:
  clean up

  17 Jul 2009; nixnut <nixnut@gentoo.org> bzr-1.15.1.ebuild:
  ppc stable #274451

  10 Jul 2009; Peter Volkov <pva@gentoo.org> bzr-1.16.1.ebuild:
  Mask more tests, update info on old failures.

  05 Jul 2009; Markus Meier <maekke@gentoo.org> bzr-1.15.1.ebuild:
  amd64 stable, bug #274451

*bzr-1.16.1 (02 Jul 2009)

  02 Jul 2009; Christian Faulhammer <fauli@gentoo.org> -bzr-1.16_rc1.ebuild,
  +bzr-1.16.1.ebuild:
  version bump and clean up

  02 Jul 2009; Raúl Porcel <armin76@gentoo.org> bzr-1.15.1.ebuild:
  sparc stable wrt #274451

  17 Jun 2009; Christian Faulhammer <fauli@gentoo.org> bzr-1.15.1.ebuild:
  stable x86, bug 274451

*bzr-1.16_rc1 (17 Jun 2009)

  17 Jun 2009; Peter Volkov <pva@gentoo.org> +bzr-1.16_rc1.ebuild:
  Version bump.
