@@ -5,10 +5,8 @@ AUX bzr-1.8-no-pyrex.patch 918 RMD160 36de25bb174bc66b512bd6b25a6cfd8a2cbb1ca3 S
 DIST bzr-1.15.1.tar.gz 4298555 RMD160 ed791a02d39a4aec1aa1ae0aef25e887da27ad6e SHA1 d340aea77e7a0a7c69b03ceb62b34f27a69c0568 SHA256 e7f5257cbfbca29f10ebf89d8b1a3d8e46ab699c71627d4417bd08167c875b93
 DIST bzr-1.18.tar.gz 5977774 RMD160 307fe8770b96b1cc67c97ec7bc62ba915a0238bb SHA1 0e738c089ad769eeea6f67befd3de93a402200a7 SHA256 80536a3b7980898f234d971a5b30c5f7d3233b1162a7920c6a1aeb845e32a949
 DIST bzr-2.0.0.tar.gz 6085108 RMD160 14ce780c90d24a432221ff0ac7c4625e1d7eef86 SHA1 ed71f73229c1327e09ab2f26cd3870fd5570ba6a SHA256 760cebe30cd2718f98b8790b2dfd33ee153709a14c91509d9e04716d70f482df
-DIST bzr-2.0rc1.tar.gz 6021378 RMD160 8b94fef2adf49fa573d6473361552f5df4bef2a3 SHA1 9c2d0b9bf35c67dbd73a6d2e97124e13ae3463de SHA256 f4eb82d70b976db8a848f7980445b27f953bbca974f50ea2e6a08e3acb4189e0
 EBUILD bzr-1.15.1.ebuild 4018 RMD160 9516b130cdd3a686ffd6a11939815ab2a53764b3 SHA1 b5e805def7c55af5c9d953594b3d6e80f36851cc SHA256 cd68ddcfe05b3113a11b99802dea50e3859d9b7fa1545a984da61e156f8af9ba
 EBUILD bzr-1.18.ebuild 3893 RMD160 3f3149b3d0813991825cafd4648b2bb1feb24e94 SHA1 70dbf51b6f4644aff4fee4b172faf6d71f7dc0e0 SHA256 c34d198e509305a8d1ab5463cc450638fabbbb183ba3570b28b762267f67e067
-EBUILD bzr-2.0.0.ebuild 3869 RMD160 1c1ddd534ca11686738b42e0e5f6efe909f69b3c SHA1 c137939ee3f6b550940820cd8b51b312ffcacb8b SHA256 e295389d7b7f897daaf923a23f5b15bd6a1f279e3b167073e151dbf5054a1212
-EBUILD bzr-2.0_rc1.ebuild 3873 RMD160 58861a749441128d051b1dc0c1de290f1d71b3d3 SHA1 4e8a23c426c89cb07fc7bf329e781b556832957a SHA256 34a588aeb1cbc12c32e4a25ef8d56112b9b8b9414b5c0ac0d21177246e2b621f
-MISC ChangeLog 16334 RMD160 18003fc15693dd63b0c8120afb1d2d64f3e91e27 SHA1 4e670c9fbfbf2904cc5441e9142206e72ea6236f SHA256 ba3f8848a336c9813e0fec5ee446e25c3ec04d30eaa815a4b8584eb23e9cf5b1
+EBUILD bzr-2.0.0.ebuild 3547 RMD160 5aca867bc45809ecbfb72391cf389cd9b7d03a06 SHA1 5f484df5b51b52962eb6cdf529b34da562aa79e7 SHA256 1f05a0619452b87ffc5b83dd20f2b566a653b723df57c6d7536b5da471347560
+MISC ChangeLog 16447 RMD160 e652878597a47a7a827339fe970850441e0c6cfb SHA1 b24008ce82778f517ca3645f8daf63b45ee653f1 SHA256 c0f7fa764236293a91ad12d34683563633bdacadb6912ee984fc4c296c35c3ea
 MISC metadata.xml 890 RMD160 20a0b377b9d83d4a59813fc61237ac1ae3a163b8 SHA1 3f06ccc8ac2d3bff0e47bda1b85c10015a86410e SHA256 5f7a2215128eaa41f1e121036f4b3af779deeaa4a8476d0d0219f9a46c089cb9
