@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/bzr
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/bzr/ChangeLog,v 1.110 2009/09/29 23:48:02 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/bzr/ChangeLog,v 1.111 2009/10/06 17:30:34 pva Exp $
+
+  06 Oct 2009; Peter Volkov <pva@gentoo.org> bzr-2.0.0.ebuild:
+  Updated tests: some were fixed, some new fail.
 
   29 Sep 2009; Jeroen Roovers <jer@gentoo.org> bzr-1.15.1.ebuild,
   bzr-1.18.ebuild, bzr-2.0.0.ebuild:
